# run-stars

./: Cargo.toml  LICENSE  README.md
crates/inotify/: Cargo.toml  README.md
crates/inotify/src/: stream.rs
crates/lib/: Cargo.toml
crates/lib/src/: error.rs  lib.rs  monitor.rs  write.rs
crates/state/: Cargo.toml
crates/state/src/: error.rs  lib.rs  monitor.rs  path.rs  read.rs  write.rs
crates/xdg/: Cargo.toml
crates/xdg/src/: lib.rs
runner/: Cargo.toml
runner/src/: error.rs  main.rs
src/: error.rs  ls.rs  main.rs  state.rs  xdg.rs
tasks/: a.sh  b  g
tui/: Cargo.toml  loading.rs
tui/src/: app.rs  event.rs  handler.rs  main.rs  render.rs  spinner.rs  terminal.rs
