[package]
name = "taskrunner"
version = "0.1.0"
authors = ["Elvyria <elvyria@tutanota.com>"]
repository = "https://gitea.com/Elvyria/taskrunner"
edition = "2021"

[dependencies]
argh = "0.1.12"
async-channel = "2.3.1"
async-process = "2.2.3"
fs4 = "0.9.0"
futures-concurrency = "7.6.1"
futures-lite = "2.3.0"
jiff = { version = "0.1.0" }
memchr = "2.7.4"
rustix = "0.38.34"
thiserror = "1.0.63"
