[package]

name    = "inotify"
version = "0.10.2"
authors = [
  "Hanno Braun <mail@hannobraun.de>",
  "Félix Saparelli <me@passcod.name>",
  "Cristian Kubis <cristian.kubis@tsunix.de>",
  "Frank Denis <github@pureftpd.org>"
]
edition = "2018"
rust-version = "1.63"

description   = "Idiomatic wrapper for inotify"
documentation = "https://docs.rs/inotify"
repository    = "https://github.com/hannobraun/inotify"
license       = "ISC"
readme        = "README.md"

keywords   = ["inotify", "linux"]
categories = ["api-bindings", "filesystem"]
exclude    = ["/.travis.yml", "/inotify-rs.sublime-project"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci   = { repository = "inotify-rs/inotify" }


[features]
default = ["stream"]
stream = ["futures-core", "async-io"]


[dependencies]
async-io     = { version = "2.3.4", optional = true }
bitflags     = "1"
futures-core = { version = "0.3.1", optional = true }
inotify-sys  = "0.1.3"
libc         = "0.2"

[dev-dependencies]
maplit       = "1.0"
rand         = "0.8"
tempfile     = "3.1.0"
futures-util = "0.3.1"
