[package]
name = "run-stars-lib"
version = "0.1.0"
authors = ["Elvyria <elvyria@tutanota.com>"]
repository = "https://github.com/Elvyria/run-stars"
edition = "2021"

[dependencies]
futures-lite = "2.3.0"
inotify = { path = "../inotify" }
jiff = "0.1.3"
libc = "0.2.158"
memchr = "2.7.4"
thiserror = "1.0.63"
xdg = { path = "../xdg" }
